--- a/package.json
+++ b/package.json
@@ -19,13 +19,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@taiga-ui/addon-mobile": "^4.22.0",
-    "@taiga-ui/cdk": "^4.22.0",
-    "@taiga-ui/core": "^4.22.0",
-    "@taiga-ui/event-plugins": "^4.0.2",
-    "@taiga-ui/icons": "^4.22.0",
-    "@taiga-ui/kit": "^4.22.0",
-    "@taiga-ui/layout": "^4.22.0",
+    "ng-zorro-antd": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
