--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cezeta-cv-website",
-  "version": "1.0.0",
+  "name": "cezeta-layout-template",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,7 +11,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
-    "@angular/cdk": "^19.0.0",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -21,9 +20,15 @@
     "@angular/router": "^19.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "@primeng/themes": "^19.0.10",
+    "@tailwindcss/postcss": "^4.0.17",
     "lodash-es": "^4.17.21",
-    "ng-zorro-antd": "^19.0.2",
+    "postcss": "^8.5.3",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.1",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -33,16 +38,12 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
-    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.1",
-    "source-map-explorer": "^2.5.3",
-    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2"
   }
 }
