--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2"
+  },
+  "optionalDependencies": {
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
+    "lightningcss-linux-x64-gnu": "^1.29.1"
   }
 }
