--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.0.17",
     "lodash-es": "^4.17.21",
+    "ng-recaptcha-2": "^15.0.3",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
@@ -45,7 +46,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"    
+    "typescript": "~5.6.2"
   },
   "optionalDependencies": {
     "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
