--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.0.17",
     "lodash-es": "^4.17.21",
+    "ng-group-controls": "^0.0.6",
     "ng-recaptcha-2": "^15.0.3",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
@@ -40,13 +41,13 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
-    "jasmine-core": "~5.4.0",
+    "jasmine-core": "^5.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "^5.8.3"
   },
   "optionalDependencies": {
     "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
