--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.0.17",
+    "animejs": "^4.0.2",
     "lodash-es": "^4.17.21",
     "ng-group-controls": "^0.0.6",
     "ng-recaptcha-2": "^15.0.3",
